--- a/selector_basics_start.html
+++ b/selector_basics_start.html
@@ -62,6 +62,7 @@
       a {
         color: green;
         font-weight: bold;
+        background-color: rgb(5,5,5);
       }
       h3:last-of-type {
         font-style: italic;
